--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Step-project1</title>
 
+  <link rel="shortcut icon" href="./img/logo/logo1.png" type="image/x-icon">
   <link rel="stylesheet" href="./style/reset.css">
   <link rel="stylesheet" href="./style/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800&display=swap" rel="stylesheet">
@@ -198,46 +199,90 @@
       <li>Wordpress</li>
     </ul>
     <div class="first-block-pict pict">
-      <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design1.jpg" alt="">
-      <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design2.jpg" alt="">
-      <img name="web-design-galerea" src="./img/graphic-design/graphic-design3.jpg" alt="">
-      <img name="wordpress-galerea" src="./img/graphic-design/graphic-design4.jpg" alt="">
-      <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design5.jpg" alt="">
-      <img name="wordpress-galerea" src="./img/graphic-design/graphic-design6.jpg" alt="">
-      <img name="web-design-galerea" src="./img/graphic-design/graphic-design7.jpg" alt="">
-      <img name="web-design-galerea" src="./img/graphic-design/graphic-design8.jpg" alt="">
-      <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design9.jpg" alt="">
-      <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design10.jpg" alt="">
-      <img name="wordpress-galerea" src="./img/graphic-design/graphic-design11.jpg" alt="">
-      <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design12.jpg" alt="">
+      <div class="pict-hover invisible">
+        <p class="pict-hover-icon1 icons">
+          <i class="fas fa-search-location"></i></p>
+        <p class="pict-hover-icon2 icons">
+          <i class="fas fa-square-root-alt"></i></p>
+        <p class="pict-hover-text1">creative design</p>
+        <p class="pict-hover-text2">Web Design</p>
+      </div>
+      <div class="img-wrapper"> <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design1.jpg"
+          alt=""></div>
+      <div class="img-wrapper"> <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design2.jpg" alt="">
+      </div>
+      <div class="img-wrapper"> <img name="web-design-galerea" src="./img/graphic-design/graphic-design3.jpg" alt="">
+      </div>
+      <div class="img-wrapper"> <img name="wordpress-galerea" src="./img/graphic-design/graphic-design4.jpg" alt="">
+      </div>
+      <div class="img-wrapper"> <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design5.jpg"
+          alt=""></div>
+      <div class="img-wrapper"> <img name="wordpress-galerea" src="./img/graphic-design/graphic-design6.jpg" alt="">
+      </div>
+      <div class="img-wrapper"> <img name="web-design-galerea" src="./img/graphic-design/graphic-design7.jpg" alt="">
+      </div>
+      <div class="img-wrapper"> <img name="web-design-galerea" src="./img/graphic-design/graphic-design8.jpg" alt="">
+      </div>
+      <div class="img-wrapper"> <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design9.jpg"
+          alt=""></div>
+      <div class="img-wrapper"> <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design10.jpg"
+          alt=""></div>
+      <div class="img-wrapper"> <img name="wordpress-galerea" src="./img/graphic-design/graphic-design11.jpg" alt="">
+      </div>
+      <div class="img-wrapper"> <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design12.jpg"
+          alt=""></div>
     </div>
     <div class="second-block-pict pict invisible">
-      <img name="wordpress-galerea" src="./img/graphic-design/graphic-design2.jpg" alt="">
-      <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design4.jpg" alt="">
-      <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design3.jpg" alt="">
-      <img name="wordpress-galerea" src="./img/graphic-design/graphic-design6.jpg" alt="">
-      <img name="wordpress-galerea" src="./img/graphic-design/graphic-design5.jpg" alt="">
-      <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design12.jpg" alt="">
-      <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design7.jpg" alt="">
-      <img name="web-design-galerea" src="./img/graphic-design/graphic-design1.jpg" alt="">
-      <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design9.jpg" alt="">
-      <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design8.jpg" alt="">
-      <img name="web-design-galerea" src="./img/graphic-design/graphic-design11.jpg" alt="">
-      <img name="web-design-galerea" src="./img/graphic-design/graphic-design10.jpg" alt="">
+      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design2.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design4.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design3.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design6.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design5.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design12.jpg"
+          alt=""></div>
+      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design7.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="web-design-galerea"
+          src="./img/graphic-design/graphic-design1.jpg" alt=""></div>
+      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design9.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design8.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="web-design-galerea" src="./img/graphic-design/graphic-design11.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="web-design-galerea" src="./img/graphic-design/graphic-design10.jpg" alt="">
+      </div>
     </div>
     <div class="third-block-pict pict invisible">
-      <img name="wordpress-galerea" src="./img/graphic-design/graphic-design2.jpg" alt="">
-      <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design4.jpg" alt="">
-      <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design6.jpg" alt="">
-      <img name="wordpress-galerea" src="./img/graphic-design/graphic-design3.jpg" alt="">
-      <img name="wordpress-galerea" src="./img/graphic-design/graphic-design5.jpg" alt="">
-      <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design12.jpg" alt="">
-      <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design7.jpg" alt="">
-      <img name="web-design-galerea" src="./img/graphic-design/graphic-design9.jpg" alt="">
-      <img name="graphic-design-galerea" src="./img/graphic-design/graphic-design1.jpg" alt="">
-      <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design11.jpg" alt="">
-      <img name="web-design-galerea" src="./img/graphic-design/graphic-design10.jpg" alt="">
-      <img name="web-design-galerea" src="./img/graphic-design/graphic-design8.jpg" alt="">
+      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design2.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design4.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design6.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design3.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design5.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design12.jpg"
+          alt=""></div>
+      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design7.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="web-design-galerea" src="./img/graphic-design/graphic-design9.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design1.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design11.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="web-design-galerea" src="./img/graphic-design/graphic-design10.jpg" alt="">
+      </div>
+      <div class="img-wrapper"><img name="web-design-galerea" src="./img/graphic-design/graphic-design8.jpg" alt="">
+      </div>
     </div>
 
     <button class="button load-more ">Load more</button>
@@ -359,9 +404,21 @@
         luctus, quam dui laoreesem, non dictum odio nisi quis
         massa. Morbi pulvinar odio eget aliquam facilisis.</p>
     </div>
-    <div class="hasan">
+    <div class="hasan1 invisible">
+      <p>James Hetfiend</p>
+      <p>Heavy Metal</p>
+    </div>
+    <div class="hasan1">
       <p>Hasan Ali</p>
       <p>UX Designer</p>
+    </div>
+    <div class="hasan1 invisible">
+      <p>Chuck Schuldiner</p>
+      <p>Death Metal</p>
+    </div>
+    <div class="hasan1 invisible">
+      <p>Joe Satriani</p>
+      <p>Instrumental</p>
     </div>
     <img src="./img/photo-people/2.png" class="main-photo-people" alt="">
 
@@ -463,6 +520,7 @@
 
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
+    <script src="./scrypt/masonry.js"></script>
 
   <script src="./scrypt/jscode.js"></script>
 
