--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <section class="first-section">
-    <header class="header"><a href="">
+    <header class="header"><div class="fixed-width header-fixed"><a href="">
         <div class="header-left">the<span class="green-text bold-text">Ham</span></div>
       </a>
       <ul class="navigation">
@@ -31,7 +31,7 @@
         <li><a href="#">team</a></li>
         <li><a href="#">contact</a></li>
         <li><a href="#"><i class="fas fa-search"></i></a></li>
-      </ul>
+      </ul></div>
     </header>
 
     <div class="buttons-area">
@@ -39,7 +39,7 @@
       <h1 class="header-big">we are creative</h1>
       <p>Just Buy And Enjoy These Awesome Features</p>
       <button class="button">EXPLORE NOW</button>
-      <button class="button">purchase now</button>
+      <button class="button blue-button">purchase now</button>
     </div>
   </section>
   <section class="second-section">
@@ -280,8 +280,8 @@
       <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design11.jpg" alt="">
       </div>
       <div class="img-wrapper"><img name="web-design-galerea" src="./img/graphic-design/graphic-design10.jpg" alt="">
-      </div>
-      <div class="img-wrapper"><img name="web-design-galerea" src="./img/graphic-design/graphic-design8.jpg" alt="">
+      </div>     
+      <div class="img-wrapper"> <img name="web-design-galerea" src="./img/graphic-design/graphic-design8.jpg" alt="">
       </div>
     </div>
 
@@ -298,8 +298,8 @@
     <p class="breaking-news h2">Breaking News</p>
     <div class="news-flex">
       <a href="#" class="data-relative">
-        <img src="./img/web-design/web-design6.jpg" alt="">
-        <p>Amazing Image Post</p>
+        <img src="./img/breaking-news/1.png" alt="">
+        <p>Amazing blog Post</p>
         <p class="admin">By admin</p>
         <p>2 comment</p>
         <div class="data-corner">
@@ -308,7 +308,7 @@
         </div>
       </a>
       <a href="#" class="data-relative">
-        <img src="./img/web-design/web-design1.jpg" alt="">
+        <img src="./img/breaking-news/2.png" alt="">
         <p>Amazing Blog Post</p>
         <p class="admin">By admin</p>
         <p>2 comment</p>
@@ -318,7 +318,7 @@
         </div>
       </a>
       <a href="#" class="data-relative">
-        <img src="./img/web-design/web-design2.jpg" alt="">
+        <img src="./img/breaking-news/3.png" alt="">
         <p>Amazing Blog Post</p>
         <p class="admin">By admin</p>
         <p>2 comment</p>
@@ -328,7 +328,7 @@
         </div>
       </a>
       <a href="#" class="data-relative">
-        <img src="./img/web-design/web-design3.jpg" alt="">
+        <img src="./img/breaking-news/4.png" alt="">
         <p>Amazing Blog Post</p>
         <p class="admin">By admin</p>
         <p>2 comment</p>
@@ -338,7 +338,7 @@
         </div>
       </a>
       <a href="#" class="data-relative">
-        <img src="./img/web-design/web-design4.jpg" alt="">
+        <img src="./img/breaking-news/5.png" alt="">
         <p>Amazing Blog Post</p>
         <p class="admin">By admin</p>
         <p>2 comment</p>
@@ -348,7 +348,7 @@
         </div>
       </a>
       <a href="#" class="data-relative">
-        <img src="./img/web-design/web-design5.jpg" alt="">
+        <img src="./img/breaking-news/6.png" alt="">
         <p>Amazing Blog Post</p>
         <p class="admin">By admin</p>
         <p>2 comment</p>
@@ -358,7 +358,7 @@
         </div>
       </a>
       <a href="#" class="data-relative">
-        <img src="./img/web-design/web-design6.jpg" alt="">
+        <img src="./img/breaking-news/7.png" alt="">
         <p>Amazing Blog Post</p>
         <p class="admin">By admin</p>
         <p>2 comment</p>
@@ -368,7 +368,7 @@
         </div>
       </a>
       <a href="#" class="data-relative">
-        <img src="./img/web-design/web-design7.jpg" alt="">
+        <img src="./img/breaking-news/8.png" alt="">
         <p>Amazing Blog Post</p>
         <p class="admin">By admin</p>
         <p>2 comment</p>
