--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
 <body>
 
   <section class="first-section">
-    <header class="header"><div class="fixed-width header-fixed"><a href="">
-        <div class="header-left">the<span class="green-text bold-text">Ham</span></div>
-      </a>
-      <ul class="navigation">
-        <li><a href="#">home</a></li>
-        <li><a href="#">about</a></li>
-        <li><a href="#">skills</a></li>
-        <li><a href="#">service</a></li>
-        <li><a href="#">work</a></li>
-        <li><a href="#">testimonial</a></li>
-        <li><a href="#">blog</a></li>
-        <li><a href="#">team</a></li>
-        <li><a href="#">contact</a></li>
-        <li><a href="#"><i class="fas fa-search"></i></a></li>
-      </ul></div>
+    <header class="header">
+      <div class="fixed-width header-fixed"><a href="">
+          <div class="header-left">the<span class="green-text bold-text">Ham</span></div>
+        </a>
+        <ul class="navigation">
+          <li><a href="#">home</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">skills</a></li>
+          <li><a href="#">service</a></li>
+          <li><a href="#">work</a></li>
+          <li><a href="#">testimonial</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">team</a></li>
+          <li><a href="#">contact</a></li>
+          <li><a href="#"><i class="fas fa-search"></i></a></li>
+        </ul>
+      </div>
     </header>
 
     <div class="buttons-area">
@@ -43,27 +45,27 @@
     </div>
   </section>
   <section class="second-section">
-    <div class="flex-div">
-      <div class="flex-div1">
+    <div class="squares">
+      <div class="squares1">
         <i class="fas fa-hand-pointer"></i>
         <p>Different theme option</p>
       </div>
-      <div class="flex-div2">
+      <div class="squares2">
         <i class="far fa-gem"></i>
         <p>fully customizable</p>
       </div>
-      <div class="flex-div3">
+      <div class="squares3">
         <i class="fas fa-assistive-listening-systems"></i>
         <p>unlimited support</p>
       </div>
-      <div class="flex-div4">
+      <div class="squares4">
         <i class="fas fa-laptop"></i>
         <p>responsive all device</p>
       </div>
     </div>
   </section>
   <section class="fixed-width">
-    <div class="our-services h2">Our services</div>
+    <div class="our-services header-mid-size">Our services</div>
     <div class="service-box">
       <ul class="nav-our-services nav">
         <li class="triangle-box">
@@ -186,11 +188,13 @@
       <p class="big-text">Everything is ready. just buy and install now</p>
       <p class="after-big-text">Smooth reliable, responsive ready, perfect portfolio, unique blog layout and many many
         options for you</p>
-      <button class="button">purchase now</button>
+      <div class="solo-button-box">
+        <button class="button solo-button">purchase now</button>
+      </div>
     </div>
   </section>
   <section class="fixed-width">
-    <p class="amazing-work h2">Our Amazing Work</p>
+    <p class="amazing-work header-mid-size">Our Amazing Work</p>
     <ul class="nav-our-work nav">
       <li>All</li>
       <li>Graphic Design</li>
@@ -198,7 +202,7 @@
       <li>Landing Pages</li>
       <li>Wordpress</li>
     </ul>
-    <div class="first-block-pict pict">
+    <div class="pict">
       <div class="pict-hover invisible">
         <p class="pict-hover-icon1 icons">
           <i class="fas fa-search-location"></i></p>
@@ -231,57 +235,80 @@
       </div>
       <div class="img-wrapper"> <img name="landing-pages-galerea" src="./img/graphic-design/graphic-design12.jpg"
           alt=""></div>
-    </div>
-    <div class="second-block-pict pict invisible">
-      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design2.jpg" alt="">
+
+
+
+      <div class="img-wrapper"><img class="invisible" name="wordpress-galerea"
+          src="./img/graphic-design/graphic-design2.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design4.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="landing-pages-galerea"
+          src="./img/graphic-design/graphic-design4.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design3.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="graphic-design-galerea"
+          src="./img/graphic-design/graphic-design3.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design6.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="wordpress-galerea"
+          src="./img/graphic-design/graphic-design6.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design5.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="wordpress-galerea"
+          src="./img/graphic-design/graphic-design5.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design12.jpg"
-          alt=""></div>
-      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design7.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="graphic-design-galerea"
+          src="./img/graphic-design/graphic-design12.jpg" alt=""></div>
+      <div class="img-wrapper"><img class="invisible" name="landing-pages-galerea"
+          src="./img/graphic-design/graphic-design7.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="web-design-galerea"
+      <div class="img-wrapper"><img class="invisible" name="web-design-galerea"
           src="./img/graphic-design/graphic-design1.jpg" alt=""></div>
-      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design9.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="graphic-design-galerea"
+          src="./img/graphic-design/graphic-design9.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design8.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="landing-pages-galerea"
+          src="./img/graphic-design/graphic-design8.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="web-design-galerea" src="./img/graphic-design/graphic-design11.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="web-design-galerea"
+          src="./img/graphic-design/graphic-design11.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="web-design-galerea" src="./img/graphic-design/graphic-design10.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="web-design-galerea"
+          src="./img/graphic-design/graphic-design10.jpg" alt="">
       </div>
-    </div>
-    <div class="third-block-pict pict invisible">
-      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design2.jpg" alt="">
+
+
+
+      <div class="img-wrapper"><img class="invisible" name="wordpress-galerea"
+          src="./img/graphic-design/graphic-design2.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design4.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="landing-pages-galerea"
+          src="./img/graphic-design/graphic-design4.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design6.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="graphic-design-galerea"
+          src="./img/graphic-design/graphic-design6.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design3.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="wordpress-galerea"
+          src="./img/graphic-design/graphic-design3.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="wordpress-galerea" src="./img/graphic-design/graphic-design5.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="wordpress-galerea"
+          src="./img/graphic-design/graphic-design5.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design12.jpg"
-          alt=""></div>
-      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design7.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="graphic-design-galerea"
+          src="./img/graphic-design/graphic-design12.jpg" alt=""></div>
+      <div class="img-wrapper"><img class="invisible" name="landing-pages-galerea"
+          src="./img/graphic-design/graphic-design7.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="web-design-galerea" src="./img/graphic-design/graphic-design9.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="web-design-galerea"
+          src="./img/graphic-design/graphic-design9.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="graphic-design-galerea" src="./img/graphic-design/graphic-design1.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="graphic-design-galerea"
+          src="./img/graphic-design/graphic-design1.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="landing-pages-galerea" src="./img/graphic-design/graphic-design11.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="landing-pages-galerea"
+          src="./img/graphic-design/graphic-design11.jpg" alt="">
       </div>
-      <div class="img-wrapper"><img name="web-design-galerea" src="./img/graphic-design/graphic-design10.jpg" alt="">
-      </div>     
-      <div class="img-wrapper"> <img name="web-design-galerea" src="./img/graphic-design/graphic-design8.jpg" alt="">
+      <div class="img-wrapper"><img class="invisible" name="web-design-galerea"
+          src="./img/graphic-design/graphic-design10.jpg" alt="">
+      </div>
+      <div class="img-wrapper"> <img class="invisible" name="web-design-galerea"
+          src="./img/graphic-design/graphic-design8.jpg" alt="">
       </div>
     </div>
 
@@ -295,7 +322,7 @@
 
   </section>
   <section class="fixed-width">
-    <p class="breaking-news h2">Breaking News</p>
+    <p class="breaking-news header-mid-size">Breaking News</p>
     <div class="news-flex">
       <a href="#" class="data-relative">
         <img src="./img/breaking-news/1.png" alt="">
@@ -382,7 +409,7 @@
   </section>
   <section class="third-bg">
     <div class="third-box">
-      <p class="theham h2">What People Say About theHam</p>
+      <p class="theham header-mid-size">What People Say About theHam</p>
       <i class="fas fa-quote-left"></i>
       <p class="text-after-qoutes invisible">Integer dignissim, augue tempus ultricies luctus, quam dui laoreet sem, non
         dictum
@@ -520,7 +547,7 @@
 
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
-    <script src="./scrypt/masonry.js"></script>
+  <script src="./scrypt/masonry.js"></script>
 
   <script src="./scrypt/jscode.js"></script>
 
